# fastetl

./: .env  Dockerfile  README.md  asgi.py  job_manager.db  pyproject.toml
src/: jobs.py  manage.py  secrets.py  server.py  worker.py
