[tool.poetry]
name = "fastetl"
version = "0.1.0"
description = "Simple Data Pipeline app using FastAPI and EasyJobs"
authors = ["Mitch Murphy <mitch.murphy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.71.0"
easyjobs = "^0.127"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pylint = "^2.12.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
